Update Programming Assignment 1.ipynb

--- a/Python-Programming-Basic-Assignments/Programming Assignment 1.ipynb
+++ b/Python-Programming-Basic-Assignments/Programming Assignment 1.ipynb
@@ -14,7 +14,7 @@
    "id": "b90df78e",
    "metadata": {},
    "source": [
-    "1.\tWrite a Python program to print \"Hello Python\"?"
+    "1.Write a Python program to print \"Hello Python\"?"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "id": "f3126e2c",
    "metadata": {},
    "source": [
-    " 2.\tWrite a Python program to do arithmetical operations addition and division.?"
+    " 2.Write a Python program to do arithmetical operations addition and division.?"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "id": "8f4bde36",
    "metadata": {},
    "source": [
-    "3.\tWrite a Python program to find the area of a triangle?"
+    "3.Write a Python program to find the area of a triangle?"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "id": "e495cc87",
    "metadata": {},
    "source": [
-    "4.\tWrite a Python program to swap two variables?"
+    "4.Write a Python program to swap two variables?"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "id": "70032f21",
    "metadata": {},
    "source": [
-    "5.\tWrite a Python program to generate a random number?"
+    "5.Write a Python program to generate a random number?"
    ]
   },
   {
